Fix invisible titlebar buttons (Windows 10)
May cause a regression
See #108

--- a/chrome/global/global.css
+++ b/chrome/global/global.css
@@ -45,11 +45,6 @@
 	-moz-box-align: center !important;
 }
 
-.toolbarbutton-icon
-{
-	-moz-context-properties: fill, fill-opacity !important;
-}
-
 #navigator-toolbox :-moz-any(.toolbarbutton-1, toolbarbutton.bookmark-item:not(.subviewbutton), .scrollbutton-up, .scrollbutton-down)
 {
 	border-radius: 99px !important;
